// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBarItem should render 1`] = `
<DocumentFragment>
  <div
    class="relative cursor-pointer"
    data-testid="side-menu__item--plugin"
  >
    <li
      class="flex items-center p-5 rounded-lg text-theme-medium"
    >
      <div
        class="text-theme-primary-contrast"
      >
        <div
          class="sc-AxjAm cpczEI"
          height="1em"
          width="1em"
        >
          <svg>
            plugin.svg
          </svg>
        </div>
      </div>
      <span
        class="ml-2 font-semibold"
      >
        General
      </span>
    </li>
  </div>
</DocumentFragment>
`;

exports[`SideBarItem should render as active 1`] = `
<DocumentFragment>
  <div
    class="relative cursor-pointer"
    data-testid="side-menu__item--plugin"
  >
    <div
      class="absolute top-0 left-0 rounded-lg sc-AxirZ dA-dDXy bg-theme-primary"
    />
    <li
      class="flex items-center p-5 rounded-lg 
  text-theme-primary
 bg-theme-primary-contrast
"
    >
      <div
        class="text-theme-primary"
      >
        <div
          class="sc-AxjAm cpczEI"
          height="1em"
          width="1em"
        >
          <svg>
            plugin.svg
          </svg>
        </div>
      </div>
      <span
        class="ml-2 font-semibold"
      >
        General
      </span>
    </li>
  </div>
</DocumentFragment>
`;
